Add WriteRowRequest/ResponseMessages.  Set svn:ignore for target directories where missing.

--- a/iter7/pom.xml
+++ b/iter7/pom.xml
@@ -56,6 +56,7 @@
 				<configuration>
 					<argLine>-Xmx512m -Xms128m</argLine>
 					<includes>
+						<include>**/*Test.java</include>
 						<include>**/*Test?.java</include>
 					</includes>
 				</configuration>
