Add ais dependency in pom

--- a/iter7/pom.xml
+++ b/iter7/pom.xml
@@ -35,6 +35,12 @@
 			<version>1.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.akiba</groupId>
+			<artifactId>akiba-ais</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
