Convert to Apache Commons Logging (like manager) and set Persistit to use it.

--- a/iter7/pom.xml
+++ b/iter7/pom.xml
@@ -41,6 +41,12 @@
 			<version>1.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
