--- a/iter7/.classpath
+++ b/iter7/.classpath
@@ -10,8 +10,8 @@
 	<classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.3/servlet-api-2.3.jar" sourcepath="M2_REPO/javax/servlet/servlet-api/2.3/servlet-api-2.3-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/akiba/akiba-ais/1.0.0/akiba-ais-1.0.0.jar" sourcepath="M2_REPO/com/akiba/akiba-ais/1.0.0/akiba-ais-1.0.0-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/com/akiba/akiba-message/1.0.0/akiba-message-1.0.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/akiba/akiba-network/1.0.0/akiba-network-1.0.0.jar" sourcepath="/M2_REPO/com/akiba/akiba-network/1.0.0/akiba-network-1.0.0-sources.jar"/>
-	<classpathentry kind="var" path="M2_REPO/com/akiba/akiba-persistit/2.0.1/akiba-persistit-2.0.1.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/akiba/akiba-network/1.0.0/akiba-network-1.0.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/akiba/akiba-persistit/2.0.1/akiba-persistit-2.0.1.jar" sourcepath="/M2_REPO/com/akiba/akiba-persistit/2.0.1/akiba-persistit-2.0.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/avalon-framework/avalon-framework/4.1.3/avalon-framework-4.1.3.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.1/commons-logging-1.1.jar" sourcepath="M2_REPO/commons-logging/commons-logging/1.1/commons-logging-1.1-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/junit/junit/3.8.1/junit-3.8.1.jar" sourcepath="M2_REPO/junit/junit/3.8.1/junit-3.8.1-sources.jar"/>
