As part of the Chunk server "install" phase; also create the assembly (big jar file)

--- a/iter7/pom.xml
+++ b/iter7/pom.xml
@@ -96,6 +96,15 @@
 						</manifest>
 					</archive>
 				</configuration>
+                <executions>
+                  <execution>
+                    <id>make-assembly</id> <!-- This is used for inheritance merges ?? -->
+                    <phase>install</phase> <!-- Append to the install phase -->
+                    <goals>
+                      <goal>single</goal>
+                    </goals>
+                  </execution>
+                </executions>
 			</plugin>
 		</plugins>
 
