--- a/iter7/.classpath
+++ b/iter7/.classpath
@@ -8,10 +8,10 @@
   <classpathentry kind="var" path="M2_REPO/javax/mail/mail/1.4/mail-1.4.jar" sourcepath="M2_REPO/javax/mail/mail/1.4/mail-1.4-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/help/search/2.0.02/search-2.0.02.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.3/servlet-api-2.3.jar" sourcepath="M2_REPO/javax/servlet/servlet-api/2.3/servlet-api-2.3-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/akiba/akiba-ais/1.0.0/akiba-ais-1.0.0.jar" sourcepath="M2_REPO/com/akiba/akiba-ais/1.0.0/akiba-ais-1.0.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/akiba/akiba-message/1.0.0/akiba-message-1.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/akiba/akiba-network/1.0.0/akiba-network-1.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/akiba/akiba-persistit/2.0.1/akiba-persistit-2.0.1.jar"/>
+  <classpathentry kind="src" path="/akiba-ais"/>
+  <classpathentry kind="src" path="/akiba-message"/>
+  <classpathentry kind="src" path="/akiba-network"/>
+  <classpathentry kind="src" path="/akiba-persistit"/>
   <classpathentry kind="var" path="M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/antlr/antlr/3.1.3/antlr-3.1.3.jar" sourcepath="M2_REPO/org/antlr/antlr/3.1.3/antlr-3.1.3-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/antlr/antlr-runtime/3.1.3/antlr-runtime-3.1.3.jar" sourcepath="M2_REPO/org/antlr/antlr-runtime/3.1.3/antlr-runtime-3.1.3-sources.jar"/>
