--- a/iter7/pom.xml
+++ b/iter7/pom.xml
@@ -66,7 +66,7 @@
 				<executions>
 					<execution>
 						<id>attach-sources</id>
-						<phase>install</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
