Add "verbose" logging.  enable by setting cserver.verbose=true

--- a/chunkserver.properties
+++ b/chunkserver.properties
@@ -1,6 +1,7 @@
 cserver.datapath=/usr/local/akiba/data
 cserver.host=localhost
 cserver.port=8080
+cserver.verbose=true
 
 mysql.host=localhost
 mysql.port=3306
