--- a/chunkserver.properties
+++ b/chunkserver.properties
@@ -1,7 +1,7 @@
 cserver.datapath=/usr/local/akiba/data
 cserver.host=localhost
 cserver.port=8080
-cserver.verbose=true
+cserver.verbose=false
 
 mysql.host=localhost
 mysql.port=3306
