--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.thimbleware.jmemcached</groupId>
+			<artifactId>jmemcached-core</artifactId>
+			<version>0.9.3-AKIBAN</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.akiban</groupId>
 			<artifactId>akiban-persistit</artifactId>
 			<version>2.0.1</version>
