--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 
 		<dependency>
 			<groupId>com.akiban</groupId>
+			<artifactId>akiban-util</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.akiban</groupId>
 			<artifactId>akiban-ais</artifactId>
 			<version>1.0.0</version>
 		</dependency>
