--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.akiban</groupId>
+			<artifactId>akiban-vstore</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.1</version>
