--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>com.akiban</groupId>
 			<artifactId>akiban-persistit</artifactId>
-			<version>2.1</version>
+			<version>2.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -105,7 +105,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.4.1</version>
 				<configuration>
-					<argLine>-Xmx512m -Xms128m</argLine>
+					<argLine>-Xmx384m -Xms128m</argLine>
 					<includes>
 						<include>**/*Test.java</include>
 						<include>**/*Test?.java</include>
