--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
 			<version>1.0.0</version>
 		</dependency>
 
+<!--
+The akiban-vstore project appears to be hollowed out.  No need for this dependency?
 		<dependency>
 			<groupId>com.akiban</groupId>
 			<artifactId>akiban-vstore</artifactId>
@@ -73,7 +75,7 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.1</version>
 		</dependency>
-
+-->
 	</dependencies>
 
 	<build>
