--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<version>1.0.0</version>
 		</dependency>
 
+        <dependency>
+            <groupId>com.akiban</groupId>
+            <artifactId>akiban-admin</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
 <!--
 The akiban-vstore project appears to be hollowed out.  No need for this dependency?
 		<dependency>
