--- a/chunkserver.properties
+++ b/chunkserver.properties
@@ -1,5 +1,4 @@
-cserver.datapath=/usr/local/akiba/data
-cserver.host=localhost
+cserver.datapath=CSERVER.INSTALL.DIR/var/lib/chunkserver
+cserver.verbose=true
 cserver.port=5140
-cserver.verbose=false
-
+persistit.rmiport=8081
