--- a/src/main/resources/chunkserver.properties
+++ b/src/main/resources/chunkserver.properties
@@ -1,5 +1,4 @@
-cserver.datapath=/usr/local/akiba/data
-mysql.host=localhost
-mysql.username=akiba
-mysql.password=akibaDB
-persistit.showgui=true
+cserver.datapath=CSERVER.INSTALL.DIR/var/lib/chunkserver
+cserver.verbose=true
+cserver.port=5140
+persistit.rmiport=8081
