--- a/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
@@ -1,17 +1,17 @@
-akiban.admin=what
-akiban.config.dir=what
+akiban.admin=
+akiban.config.dir=
 
-cserver.datapath=what
-cserver.decision_engine=what
-cserver.fixed=false
-cserver.host=localhost
-cserver.jar_file=what
-cserver.max_heap_mb=what
-cserver.name=what
+cserver.datapath=
+cserver.decision_engine=
+cserver.fixed=
+cserver.host=
+cserver.jar_file=
+cserver.max_heap_mb=
+cserver.name=
 cserver.port=5140
-cserver.verbose=what
+cserver.verbose=
 
-mysql.install.dir=what
+mysql.install.dir=
 
 persistit.buffer.count.8192=1K
 persistit.journalpath=${datapath}/akiban_journal
