--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root category priority to INFO
-log4j.rootCategory=WARN,rollingfile
+log4j.rootCategory=WARN,console
 
 # Set to be a ConsoleAppender (writes to system console).
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -8,13 +8,13 @@ log4j.appender.console.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c{1} - %m
 
 # Set to be a file.
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=CSERVER.INSTALL.DIR/var/log/chunkserver.log
+log4j.appender.file.File=/tmp/chunkserver.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c{1} - %m%n
 
 
 log4j.appender.rollingfile=org.apache.log4j.RollingFileAppender
-log4j.appender.rollingfile.File=CSERVER.INSTALL.DIR/var/log/chunkserver.log
+log4j.appender.rollingfile.File=/tmp/chunkserver.log
 # Set the maximum log file size (use KB, MB or GB)
 log4j.appender.rollingfile.MaxFileSize=10000KB
 # Set the number of log files (0 means no backup files at all)
