Network service. Cleanup of network-related merge problems between network_prototype and fbase15.

--- a/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
@@ -7,11 +7,12 @@ akiban.config.dir=
 cserver.datapath=
 cserver.decision_engine=
 cserver.fixed=
-cserver.host=
+cserver.host=0.0.0.0
 cserver.jar_file=
 cserver.max_heap_mb=
 cserver.name=
 cserver.port=5140
+cserver.tcp_no_delay=true
 cserver.verbose=
 
 mysql.install.dir=
