CServerConfig is dead; long live ConfigurationService.

--- a/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
@@ -1,12 +1,11 @@
 REQUIRED.akiban=admin
 REQUIRED.cserver=jar_file, name
 
-#akiban.admin=
 akiban.config.dir=
 
 cserver.datapath=
 cserver.decision_engine=
-cserver.fixed=
+cserver.fixed=false
 cserver.host=0.0.0.0
 cserver.jar_file=
 cserver.max_heap_mb=
@@ -26,4 +25,4 @@ persistit.timeout=60000
 persistit.txnvolume=akiban_txn
 persistit.volume.1=${datapath}/akiban_system.v0,create,pageSize:8K,initialSize:10K,extensionSize:1K,maximumSize:10G
 persistit.volume.2=${datapath}/akiban_txn.v0,create,pageSize:8K,initialSize:1M,extensionSize:1M,maximumSize:10G
-persistit.volume.3=${datapath}/${volume.name}.v01,create,pageSize:8k,initialSize:5M,extensionSize:5M,maximumSize:100G");
+persistit.volume.3=${datapath}/akiban_data.v01,create,pageSize:8k,initialSize:5M,extensionSize:5M,maximumSize:100G
