--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,21 @@
     </executions>
       </plugin>
 
+                        <plugin>
+                                <groupId>com.atlassian.maven.plugins</groupId>
+                                <artifactId>maven-clover2-plugin</artifactId>
+				<version>3.0.1</version>
+                                <configuration>
+                                        <generateHistorical>true</generateHistorical>
+                                        <historyDir>/clover/history</historyDir>
+					<license><![CDATA[PpMOqBXixXwmrECcCXcNWMiPdoNUxGimeeaAxQLAHXjuxGq
+mj2L00k1BlPcP>5lr6tcyjP5U2KJ>74Tfqpr3R>yJZm5IOW
+rqortTONOOQqqprRPqnuVOQmPNRMMqqnnnVVTXusxXowuUx
+xMnmnmUUnotqnmqummmmmUUnotqnmqummmmmUUXhfYXkWfk
+ZUUn]]></license>
+                                </configuration>
+                        </plugin>
+
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -224,31 +239,8 @@
           </excludes>
         </configuration>
       </plugin>
- 
- <!-- install the cserver to ../build/cserver -->
- <!--plugin>
-     <inherited>false</inherited>
-     <artifactId>maven-antrun-plugin</artifactId>
-     <executions>
-         <execution>
-             <id>install-cserver</id>
-             <phase>install</phase>
-             <goals>
-                 <goal>run</goal>
-             </goals>
-             <configuration>
-                 <tasks>
-                     <ant dir="." antfile="install.xml" target="install-cserver" />
-                 </tasks>
-             </configuration>
-         </execution>
-     </executions>
- </plugin-->
-
-
     </plugins>
 </build>
-
-
-
 </project>
+
+
