--- a/pom.xml
+++ b/pom.xml
@@ -147,23 +147,26 @@
 
 <build>
     <plugins>
-
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.1</version>
+	<plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>reserve-network-port</id>
+            <goals>
+              <goal>reserve-network-port</goal>
+            </goals>
+            <phase>process-resources</phase>
             <configuration>
-                <executable>./check_port_available</executable>
+              <portNames>
+                <portName>cserver.port</portName>
+                <portName>debug.port</portName>
+              </portNames>
             </configuration>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>exec</goal>
-                    </goals>
-                    <phase>validate</phase>
-                </execution>
-            </executions>
-        </plugin>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
@@ -225,7 +228,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.6</version>
         <configuration>
-	<argLine>-Xmx512m -Xms128m</argLine>
+	<argLine>-Xmx512m -Xms128m -Dcserver.port=${cserver.port}</argLine>
           <includes>
 		<include>**/*Test.java</include>
                 <include>**/*Test?.java</include>
