--- a/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
@@ -26,3 +26,5 @@ persistit.txnvolume=akiban_txn
 persistit.volume.1=${datapath}/akiban_system.v0,create,pageSize:8K,initialSize:10K,extensionSize:1K,maximumSize:10G
 persistit.volume.2=${datapath}/akiban_txn.v0,create,pageSize:8K,initialSize:1M,extensionSize:1M,maximumSize:10G
 persistit.volume.3=${datapath}/akiban_data.v01,create,pageSize:8k,initialSize:5M,extensionSize:5M,maximumSize:100G
+
+#services.start_blocked=true
