--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,8 @@
             <configuration>
               <portNames>
                 <portName>cserver.port</portName>
+                <portName>rmi.port</portName>
+                <portName>jmx.port</portName>
                 <portName>debug.port</portName>
               </portNames>
             </configuration>
@@ -228,7 +230,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.6</version>
         <configuration>
-	<argLine>-Xmx512m -Xms128m -Dcserver.port=${cserver.port}</argLine>
+	<argLine>-Xmx512m -Xms128m -Drmiport=${rmi.port} -Dcserver.port=${cserver.port}</argLine>
           <includes>
 		<include>**/*Test.java</include>
                 <include>**/*Test?.java</include>
