--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
             <artifactId>jetty-embedded</artifactId>
             <version>6.1.14</version>
         </dependency>
+        <dependency>
+            <groupId>com.thimbleware.jmemcached</groupId>
+            <artifactId>jmemcached-core</artifactId>
+            <version>0.9</version>
+        </dependency>
     </dependencies>
 
 
