Updated pom file to get jmemcached from thimbleware's maven repo.

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
             <name>libs-snapshots-local</name>
             <url>http://172.16.20.117:9999/artifactory/libs-snapshots-local</url>
         </repository>
+        <repository>
+            <id>thimbleware.repo</id>
+            <url>http://thimbleware.com/maven</url>
+        </repository>
     </repositories>
     
     <pluginRepositories>
@@ -136,7 +140,7 @@
         <dependency>
             <groupId>com.thimbleware.jmemcached</groupId>
             <artifactId>jmemcached-core</artifactId>
-            <version>0.9</version>
+            <version>0.9.1</version>
         </dependency>
     </dependencies>
 
