--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
             <version>6.1.14</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.5.11</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.thimbleware.jmemcached</groupId>
             <artifactId>jmemcached-core</artifactId>
             <version>0.9.1</version>
