--- a/debian/rules
+++ b/debian/rules
@@ -20,7 +20,7 @@ install: build
 	dh_install
 
 	# Copy in the jar and symlink to something stable
-	dh_install build/akiban-cserver-0.0.2-SNAPSHOT-jar-with-dependencies.jar \
+	dh_install target/akiban-cserver-0.0.2-SNAPSHOT-jar-with-dependencies.jar \
 		usr/share/akiban
 	dh_link usr/share/akiban/akiban-server-0.0.2-SNAPSHOT-jar-with-dependencies.jar \
 		usr/share/akiban/akiban-server.jar
