Changing memcache service to use config property for port instead of hard-coded value.

--- a/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
@@ -9,6 +9,7 @@ cserver.fixed=false
 cserver.host=0.0.0.0
 cserver.jar_file=
 cserver.max_heap_mb=
+cserver.memcached.port=11211
 cserver.name=
 cserver.port=5140
 cserver.tcp_no_delay=true
