--- a/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
@@ -27,4 +27,6 @@ persistit.volume.1=${datapath}/akiban_system.v0,create,pageSize:8K,initialSize:1
 persistit.volume.2=${datapath}/akiban_txn.v0,create,pageSize:8K,initialSize:1M,extensionSize:1M,maximumSize:10G
 persistit.volume.3=${datapath}/akiban_data.v01,create,pageSize:8k,initialSize:5M,extensionSize:5M,maximumSize:100G
 
+persistit.tablespace.default=*:akiban_data
+
 #services.start_blocked=true
