--- a/conf/config/chunkserver.properties
+++ b/conf/config/chunkserver.properties
@@ -1,4 +1,6 @@
 cserver.datapath=/tmp/chunkserver
-cserver.verbose=true
 cserver.port=5140
+cserver.tablespace.schema.drupal = drupal*:${datapath}/${schema},create,pageSize:8K,initialSize:10M,extensionSize:1M,maximumSize:100G
+cserver.tablespace.schema.tpcc = tpcc*:${datapath}/${schema},create,pageSize:8K,initialSize:10M,extensionSize:1M,maximumSize:100G
+
 persistit.rmiport=8081
