--- a/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
@@ -4,7 +4,6 @@ REQUIRED.cserver=jar_file, name
 akiban.config.dir=
 
 cserver.datapath=
-cserver.decision_engine=
 cserver.fixed=false
 cserver.host=0.0.0.0
 cserver.jar_file=
@@ -14,6 +13,7 @@ cserver.name=
 cserver.port=5140
 cserver.tcp_no_delay=true
 cserver.verbose=
+cserver.tablespace.default=*:akiban_data
 
 mysql.install.dir=
 
@@ -28,6 +28,5 @@ persistit.volume.1=${datapath}/akiban_system.v0,create,pageSize:8K,initialSize:1
 persistit.volume.2=${datapath}/akiban_txn.v0,create,pageSize:8K,initialSize:1M,extensionSize:1M,maximumSize:10G
 persistit.volume.3=${datapath}/akiban_data.v01,create,pageSize:8k,initialSize:5M,extensionSize:5M,maximumSize:100G
 
-persistit.tablespace.default=*:akiban_data
 
 #services.start_blocked=true
