--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
     </repositories>
     <dependencies>
         <dependency>
+            <groupId>com.akiban</groupId>
+            <artifactId>akiban-system-tests</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.1</version>
