Allow schema/tree patterns.  Change 'tablespace' to 'treespace' to avoid confusion with MySQL commands

--- a/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
@@ -13,7 +13,7 @@ cserver.name=
 cserver.port=5140
 cserver.tcp_no_delay=true
 cserver.verbose=
-cserver.tablespace.default=*:akiban_data
+cserver.treespace.default=*:akiban_data
 
 mysql.install.dir=
 
