--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
             <artifactId>jmemcached-core</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
