--- a/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/cserver/service/config/configuration-defaults.properties
@@ -6,6 +6,7 @@ cserver.host=0.0.0.0
 cserver.jar_file=
 cserver.max_heap_mb=
 cserver.memcached.port=11211
+cserver.memcached.output.format=json
 cserver.name=
 cserver.port=5140
 cserver.tcp_no_delay=true
