Modified PersistitLoader to load $final tables in order of depth, so tables near the root are loaded before tables further from the root.

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,12 @@
             <groupId>velocity</groupId>
             <artifactId>velocity-dep</artifactId>
             <version>1.4</version>
-        </dependency>
+        </dependency>                                                                                                  
+        <dependency>                                                                                                   
+            <groupId>mysql</groupId>                                                                                   
+            <artifactId>mysql-connector-java</artifactId>                                                              
+            <version>5.1.10</version>                                                                                  
+        </dependency>  
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
