Added goal for chceking and adding license to source files.

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,17 @@
             <id>thimbleware.repo</id>
             <url>http://thimbleware.com/maven</url>
         </repository>
+        <repository>
+        <id>mc-release</id>
+        <name>Local Maven repository of releases</name>
+        <url>http://mc-repo.googlecode.com/svn/maven2/releases</url>
+        <snapshots>
+            <enabled>false</enabled>
+        </snapshots>
+        <releases>
+            <enabled>true</enabled>
+        </releases>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -271,6 +282,20 @@
                 <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
                 <xmlOutput>true</xmlOutput>
             </configuration>
+        </plugin>
+        <plugin>
+            <groupId>com.mycila.maven-license-plugin</groupId>
+            <artifactId>maven-license-plugin</artifactId>
+            <configuration>
+                <header>src/etc/header.txt</header>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>check</goal>
+                    </goals>
+                </execution>
+            </executions>
         </plugin>
     </plugins>
 </build>
