Modifying resource filtering so that the version file ends up in the jar's version/akserver_version. See: http://maven.apache.org/plugins/maven-resources-plugin/examples/filter.html

--- a/pom.xml
+++ b/pom.xml
@@ -157,12 +157,18 @@
     <build>
         <resources>
             <resource>
-                <directory>src/main/resources/version</directory>
+                <directory>src/main/resources</directory>
                 <filtering>true</filtering>
+                <includes>
+                    <include>version/akserver_version</include>
+                </includes>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>false</filtering>
+                <excludes>
+                    <exclude>version/akserver_version</exclude>
+                </excludes>
             </resource>
         </resources>
         <plugins>
