--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
         </dependency>    
         <dependency>
             <groupId>com.akiban</groupId>
-            <artifactId>akiban-persistit</artifactId>
+            <artifactId>akiban-persistit-core</artifactId>
             <version>2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
