Fix truncate table bug by passing all needed columns in the store.deleteRow() call.
Add another case to the integration test.

--- a/.bzrignore
+++ b/.bzrignore
@@ -3,7 +3,6 @@ akiban-cserver.ipr
 akiban-cserver.iws
 src/main/antlr3/com/akiban/ais/ddl/output/
 src/main/antlr3/com/akiban/cserver/service/memcache/output/
-target
 velocity.log
 debian/debhelper.log
 debian/files
@@ -16,3 +15,5 @@ redhat/rpmbuild
 ./.classpath
 ./.project
 ./.settings
+./.idea
+./target
