s/([aA])kiba([^n])/kiban/g

--- a/conf/config/server.properties
+++ b/conf/config/server.properties
@@ -25,8 +25,8 @@ cserver.port=5140
 # examples of treespace policy declarations.
 #
 # cserver.treespace.2=drupal*:${datapath}/${schema}.data,create,pageSize:8K,initialSize:10M,extensionSize:10M,maximumSize:100G
-# cserver.treespace.1=drupal*/_akiba_node*:${datapath}/${schema}_node.data,create,pageSize:8K,initialSize:10M,extensionSize:10M,maximumSize:100G
-# cserver.treespace.3=drupal*/_akiba_menu*:${datapath}/${schema}${tree}.data,create,pageSize:8K,initialSize:10M,extensionSize:10M,maximumSize:100G
+# cserver.treespace.1=drupal*/_akiban_node*:${datapath}/${schema}_node.data,create,pageSize:8K,initialSize:10M,extensionSize:10M,maximumSize:100G
+# cserver.treespace.3=drupal*/_akiban_menu*:${datapath}/${schema}${tree}.data,create,pageSize:8K,initialSize:10M,extensionSize:10M,maximumSize:100G
 
 # port to which to start RMI. the Persistit AdminUI utility can attach
 # via RMI.  remove to avoid starting a RMI server
