--- a/redhat/log4j.properties
+++ b/redhat/log4j.properties
@@ -43,6 +43,6 @@ log4j.appender.rollingfile.layout.ConversionPattern=%d{ISO8601} [%t] %-5p %c{1} 
 
 # Logger for Tomcat - Roll Over midnight every day
 #log4j.appender.gwt=org.apache.log4j.DailyRollingFileAppender
-#log4j.appender.gwt.File=${catalina.home}/logs/akiba-gwt-sample.log
+#log4j.appender.gwt.File=${catalina.home}/logs/akiban-gwt-sample.log
 #log4j.appender.gwt.layout=org.apache.log4j.PatternLayout
 #log4j.appender.gwt.layout.ConversionPattern=%d{HH:mm:ss} %p %t %c{1} - %m%n
