--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -14,19 +14,19 @@
 #
 
 REQUIRED.akiban=admin
-REQUIRED.cserver=jar_file, name
+REQUIRED.akserver=jar_file, name
 
-cserver.datapath=
-cserver.host=0.0.0.0
-cserver.jar_file=
-cserver.max_heap_mb=
-cserver.memcached.port=11211
-cserver.memcached.output.format=json
-cserver.name=
-cserver.port=5140
-cserver.tcp_no_delay=true
-cserver.verbose=
-cserver.treespace.default=*:akiban_data
+akserver.datapath=
+akserver.host=0.0.0.0
+akserver.jar_file=
+akserver.max_heap_mb=
+akserver.memcached.port=11211
+akserver.memcached.output.format=json
+akserver.name=
+akserver.port=5140
+akserver.tcp_no_delay=true
+akserver.verbose=
+akserver.treespace.default=*:akiban_data
 
 mysql.install.dir=
 
