--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -13,7 +13,7 @@
 # along with this program.  If not, see http://www.gnu.org/licenses.
 #
 
-cserver.datapath=CSERVER.INSTALL.DIR/var/lib/chunkserver
-cserver.verbose=true
-cserver.port=5140
+akserver.datapath=AKSERVER.INSTALL.DIR/var/lib/chunkserver
+akserver.verbose=true
+akserver.port=5140
 persistit.rmiport=8081
