Changing the default fairness to true

--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -17,7 +17,7 @@ REQUIRED.akiban=admin
 REQUIRED.akserver=jar_file, name
 
 akserver.datapath=
-akserver.dxl.lock.fair=false
+akserver.dxl.lock.fair=true
 akserver.host=0.0.0.0
 akserver.jar_file=
 akserver.max_heap_mb=
