Unit tests running cleanly with OperatorBasedRowCollector. Integration tests are not.

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -16,7 +16,7 @@
 #
 # Test Logger. 
 #
-log4j.rootCategory=INFO, console
+log4j.rootCategory=WARN, console
 
 # Set to be a ConsoleAppender (writes to system console).
 log4j.appender.console=org.apache.log4j.ConsoleAppender
