Using the OperatorStore by default

--- a/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
+++ b/src/main/resources/com/akiban/server/service/config/configuration-defaults.properties
@@ -34,6 +34,8 @@ akserver.verbose=
 akserver.treespace.default=*:akiban_data
 akserver.statistics=
 
+akserver.debug.useOperatorStore=true
+
 mysql.install.dir=
 
 persistit.buffersize=16384
